dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/alert.c)

AM_INIT_AUTOMAKE(antidote, 0.5.10)

AM_CONFIG_HEADER(src/config.h:src/config.in)

dnl Check for and setup GNU stuff
AC_DEFINE(_GNU_SOURCE)

dnl Checks for programs.
AC_PROG_CC

dnl BEGIN JAMES' STUFF

dnl END JAMES' STUFF

dnl Checks for libraries.
dnl Replace `main' with a function in -lpcap:
AC_CHECK_LIB(pcap, pcap_loop)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_CHECK_FUNCS(gethostname gettimeofday socket)

AC_OUTPUT(Makefile src/Makefile, echo timestamp > stamp-h)
